tests/fail/native-attribute-redefinition.astr
module native-attribute-redefinition

attributes

  def parent = id
